noinst_LIBRARIES = libedio.a
INCLUDES = -I$(top_srcdir)/src
libedio_a_METASOURCES = AUTO
libedio_a_SOURCES = reactorindex.cpp fdindex.cpp kqueuer.cpp epoll.cpp rtsigio.cpp ediostream.cpp outputbuf.cpp cacheos.cpp inputstream.cpp bufferedos.cpp outputstream.cpp flowcontrol.cpp iochain.cpp multiplexerfactory.cpp eventreactor.cpp poller.cpp multiplexer.cpp pollfdreactor.cpp lookupfd.cpp devpoller.cpp

